--- a/src/main/res/values-uk/strings.xml
+++ b/src/main/res/values-uk/strings.xml
@@ -33,6 +33,7 @@
     <string name="layer_type">Тип TMS</string>
     <string name="create_layer">Створити шар</string>
     <string name="create_tms_layer">Створити шар TMS</string>
+    <string name="create_qms_layer">Добавить геосервис</string>
     <string name="tmstype_osm">XYZ (OSM)</string>
     <string name="tmstype_normal">TMS (OSGeo spec.)</string>
     <string name="error_invalid_url">Посилання недійсне</string>
@@ -238,5 +239,5 @@
     <string name="location_gps">GPS</string>
     <string name="location_network">По Wi-Fi та координатам мережі</string>
     <string name="title_edit_by_walk">Запись обходом</string>
-    <string name="advanced">Расширенный</string>
+    <string name="new_tms">Новый</string>
 </resources>
