--- a/src/main/res/values-ru/strings.xml
+++ b/src/main/res/values-ru/strings.xml
@@ -38,6 +38,7 @@
     <string name="tmstype_osm">XYZ (OSM)</string>
     <string name="tmstype_normal">TMS (OSGeo)</string>
     <string name="error_invalid_url">Неправильный URL</string>
+    <string name="qms_unavailable">Сервер геосервисов недоступен</string>
     <string name="nextgis_web">NextGIS Web</string>
     <string name="ngw_login_title">Учетная запись в NextGIS Web</string>
     <string name="ngw_login_description">Введите URL сервера NextGIS Web, имя пользователя и пароль</string>
