--- a/src/main/res/values-uk/strings.xml
+++ b/src/main/res/values-uk/strings.xml
@@ -37,6 +37,7 @@
     <string name="tmstype_osm">XYZ (OSM)</string>
     <string name="tmstype_normal">TMS (OSGeo spec.)</string>
     <string name="error_invalid_url">Посилання недійсне</string>
+    <string name="qms_unavailable">Сервер геосервисов недоступен</string>
     <string name="nextgis_web">NextGIS Web</string>
     <string name="ngw_login_title">Акаунт NextGIS Web</string>
     <string name="ngw_login_description">Введіть посилання на сервер NextGIS Web, ваш логін і пароль</string>
