--- a/src/main/res/values-ru/strings.xml
+++ b/src/main/res/values-ru/strings.xml
@@ -186,7 +186,7 @@
     <string name="edit_account_summary">Редатирование имени и пароля пользователя</string>
     <string name="tms_layer_cache_size">Размер кэша тайлов TMS</string>
     <string name="make_grayscale">Градации серого</string>
-    <string name="contrast">Контраст</string>
+    <string name="contrast">Контраст: %1$.1f</string>
     <string name="brightness">Яркость</string>
     <string name="menu_zoom_extent">Увеличить до охвата</string>
     <string name="menu_download_tiles">Загрузить тайлы</string>
@@ -215,7 +215,6 @@
     <string name="layer_local_path">Локальный путь: %1$s</string>
     <string name="layer_remote_path">Удаленный: %1$s</string>
     <string name="layer_has_form">У слоя есть пользовательская форма</string>
-    <string name="layer_has_no_form">У слоя нет пользовательской формы</string>
     <string name="point">Точка</string>
     <string name="multi_point">Мультиточка</string>
     <string name="linestring">Линия</string>
