--- a/src/main/res/values-ru/strings.xml
+++ b/src/main/res/values-ru/strings.xml
@@ -174,6 +174,7 @@
     <string name="mainSettings">Основные настройки</string>
     <string name="displaySettings">Настройки отображения</string>
     <string name="fill_color">Цвет заливки</string>
+    <string name="stroke_color">Цвет обводки</string>
     <string name="layerSettings">Настройки слоя</string>
     <string name="red">красный</string>
     <string name="green">зеленый</string>
