Add style settings to vector layer, fix #63

--- a/src/main/res/values-ru/strings.xml
+++ b/src/main/res/values-ru/strings.xml
@@ -175,6 +175,21 @@
     <string name="displaySettings">Настройки отображения</string>
     <string name="fill_color">Цвет заливки</string>
     <string name="stroke_color">Цвет обводки</string>
+    <string name="width">Толщина</string>
+    <string name="size">Размер</string>
+    <string name="fill">Заливка</string>
+    <string name="type">Тип</string>
+    <string name="type_solid">Сплошная</string>
+    <string name="type_dash">Пунктир</string>
+    <string name="type_edge">Сплошная по границам</string>
+    <string name="type_point">Точка</string>
+    <string name="type_circle">Круг</string>
+    <string name="type_diamond">Ромб</string>
+    <string name="type_cross">Крест</string>
+    <string name="type_triangle">Треугольник</string>
+    <string name="type_box">Квадрат</string>
+    <string name="type_edit_circle">Круг 2</string>
+    <string name="type_crossed_box">Крест в квадрате</string>
     <string name="layerSettings">Настройки слоя</string>
     <string name="red">красный</string>
     <string name="green">зеленый</string>
