--- a/src/main/res/values-uk/strings.xml
+++ b/src/main/res/values-uk/strings.xml
@@ -173,6 +173,21 @@
     <string name="displaySettings">Display settings</string>
     <string name="fill_color">Fill color</string>
     <string name="stroke_color">Цвет обводки</string>
+    <string name="width">Толщина</string>
+    <string name="size">Размер</string>
+    <string name="fill">Заливка</string>
+    <string name="type">Тип</string>
+    <string name="type_solid">Сплошная</string>
+    <string name="type_dash">Пунктир</string>
+    <string name="type_edge">Сплошная на границах</string>
+    <string name="type_point">Точка</string>
+    <string name="type_circle">Круг</string>
+    <string name="type_diamond">Ромб</string>
+    <string name="type_cross">Крест</string>
+    <string name="type_triangle">Треугольник</string>
+    <string name="type_box">Квадрат</string>
+    <string name="type_edit_circle">Круг 2</string>
+    <string name="type_crossed_box">Крест в квадрате</string>
     <string name="layerSettings">Layer settings</string>
     <string name="red">red</string>
     <string name="green">green</string>
