--- a/src/main/res/values-pt-rBR/strings.xml
+++ b/src/main/res/values-pt-rBR/strings.xml
@@ -174,6 +174,21 @@
     <string name="displaySettings">Display settings</string>
     <string name="fill_color">Fill color</string>
     <string name="stroke_color">Stroke color</string>
+    <string name="width">Width</string>
+    <string name="size">Size</string>
+    <string name="fill">Filled</string>
+    <string name="type">Type</string>
+    <string name="type_solid">Solid</string>
+    <string name="type_dash">Dash</string>
+    <string name="type_edge">Edge solid</string>
+    <string name="type_point">Point</string>
+    <string name="type_circle">Circle</string>
+    <string name="type_diamond">Diamond</string>
+    <string name="type_cross">Cross</string>
+    <string name="type_triangle">Triangle</string>
+    <string name="type_box">Box</string>
+    <string name="type_edit_circle">Edit circle</string>
+    <string name="type_crossed_box">Crossed box</string>
     <string name="layerSettings">Layer settings</string>
     <string name="red">red</string>
     <string name="green">green</string>
