--- a/src/main/res/values-ru/strings.xml
+++ b/src/main/res/values-ru/strings.xml
@@ -191,6 +191,7 @@
     <string name="type_edit_circle">Круг 2</string>
     <string name="type_crossed_box">Крест в квадрате</string>
     <string name="layerSettings">Настройки слоя</string>
+    <string name="label_field_toast">Поле %1$s выбрано как метка</string>
     <string name="red">красный</string>
     <string name="green">зеленый</string>
     <string name="blue">синий</string>
