--- a/src/main/res/values-ru/strings.xml
+++ b/src/main/res/values-ru/strings.xml
@@ -269,4 +269,11 @@
     <string name="tms_3_screens">3 экрана</string>
     <string name="light">Светлая</string>
     <string name="dark">Тёмная</string>
+    <string name="renderer">Рендер</string>
+    <string name="simple_renderer">Обычный</string>
+    <string name="rule_renderer">По правилу</string>
+    <string name="rules">Правила</string>
+    <string name="default_style">Стиль по-умолчанию</string>
+    <string name="value">Значение</string>
+    <string name="id">ИД</string>
 </resources>
