--- a/src/main/res/values-pt-rBR/strings.xml
+++ b/src/main/res/values-pt-rBR/strings.xml
@@ -275,4 +275,5 @@
     <string name="default_style">Default style</string>
     <string name="value">Value</string>
     <string name="id">ID</string>
+    <string name="replace_field_rule">All rules will be deleted due to changing rule field. Are you sure?</string>
 </resources>
