--- a/src/main/res/values-ru/strings.xml
+++ b/src/main/res/values-ru/strings.xml
@@ -276,4 +276,5 @@
     <string name="default_style">Стиль по-умолчанию</string>
     <string name="value">Значение</string>
     <string name="id">ИД</string>
+    <string name="replace_field_rule">Все текущие правила будут удалены из-за смены поля для правила. Вы уверены?</string>
 </resources>
