Add button to create GIS on my.nextgis.com

--- a/src/main/res/values-uk/strings.xml
+++ b/src/main/res/values-uk/strings.xml
@@ -276,4 +276,5 @@
     <string name="id">ИД</string>
     <string name="delete_account_warn_msg">Учетная запись будет удалена!\nВсе слои будут удалены!\nСинхронизация будет остановлена!</string>
     <string name="replace_field_rule">Все текущие правила будут удалены из-за смены поля для правила. Вы уверены?</string>
+    <string name="new_gis">Создать ГИС</string>
 </resources>
