--- a/src/main/res/values-ru/strings.xml
+++ b/src/main/res/values-ru/strings.xml
@@ -277,4 +277,5 @@
     <string name="value">Значение</string>
     <string name="id">ИД</string>
     <string name="replace_field_rule">Все текущие правила будут удалены из-за смены поля для правила. Вы уверены?</string>
+    <string name="new_gis">Создать ГИС</string>
 </resources>
