--- a/src/main/res/values-ru/strings.xml
+++ b/src/main/res/values-ru/strings.xml
@@ -50,7 +50,7 @@
     <string name="canceled">Отменено</string>
     <string name="account_already_exists">Учетная запись уже существует</string>
     <string name="error_login">Ошибка входа</string>
-    <string name="account_setup">Настройки учетной записи</string>
+    <string name="add_nextgis">Добавить NextGIS</string>
     <string name="ngw_settings">Настройки NextGIS Web</string>
     <string name="add_account">Добавить учетную запись</string>
     <string name="add_account_summary">Добавить учетную запись NextGIS Web</string>
@@ -62,7 +62,7 @@
     <string name="wait_sync_stopping">Ожидание остановки синхронизации</string>
     <string name="add">Добавить</string>
     <string name="select">Выбор</string>
-    <string name="select_ngw_layer">Выбрать слой NextGIS Web</string>
+    <string name="choose_layers">Выбрать слой</string>
     <string name="ngw_account">Учетная запись NextGIS Web</string>
     <string name="loading_summary">Подождите, идет загрузка данных</string>
     <string name="up_dots">..</string>
@@ -278,4 +278,7 @@
     <string name="id">ИД</string>
     <string name="replace_field_rule">Все текущие правила будут удалены из-за смены поля для правила. Вы уверены?</string>
     <string name="new_gis">Создать ГИС</string>
+    <string name="manual_ngw">Собственные настройки</string>
+    <string name="instance_name">Имя ГИС</string>
+    <string name="ngw_from_my_nextgis">ГИС из my.nextgis.com</string>
 </resources>
