--- a/src/main/res/values-pt-rBR/strings.xml
+++ b/src/main/res/values-pt-rBR/strings.xml
@@ -40,8 +40,6 @@
     <string name="qms_unavailable">Geoservice server is unavailable</string>
     <string name="nextgis_web">NextGIS Web</string>
     <string name="ngw_login_title">NextGIS Web account</string>
-    <string name="ngw_login_description">Input NextGIS Web server URL, your login and password</string>
-    <string name="ngw_edit_login_description">Input your login and password for the NextGIS Web server</string>
     <string name="ngw_url">NextGIS Web URL</string>
     <string name="password">Password</string>
     <string name="login">Login</string>
@@ -49,10 +47,9 @@
     <string name="canceled">Canceled</string>
     <string name="account_already_exists">Account already exist</string>
     <string name="error_login">Login failed</string>
-    <string name="add_nextgis">Add NextGIS</string>
+    <string name="add_nextgis">Add from NextGIS</string>
     <string name="ngw_settings">NextGIS Web settings</string>
     <string name="add_account">Add account</string>
-    <string name="add_account_summary">Add NextGIS Web account</string>
     <string name="delete_account">Delete account</string>
     <string name="delete_account_ask">Delete account?</string>
     <string name="delete_account_summary">Delete account. All layers connected with this account will be deleted too. Active synchronization will be stopped.</string>
@@ -62,7 +59,6 @@
     <string name="add">Add</string>
     <string name="select">Select</string>
     <string name="choose_layers">Select layer</string>
-    <string name="ngw_account">NextGIS Web account</string>
     <string name="loading_summary">Wait a little. The data is loading</string>
     <string name="up_dots">..</string>
     <string name="up">Up</string>
@@ -277,7 +273,8 @@
     <string name="id">ID</string>
     <string name="replace_field_rule">All rules will be deleted due to changing rule field. Are you sure?</string>
     <string name="new_gis">Create GIS</string>
-    <string name="manual_ngw">Manual settings</string>
+    <string name="manual_ngw">Switch to advanced</string>
     <string name="instance_name">Instance name</string>
-    <string name="ngw_from_my_nextgis">Account from my.nextgis.com</string>
+    <string name="ngw_from_my_nextgis">Create your own GIS at my.nextgis.com</string>
+    <string name="new_account">New account</string>
 </resources>
