--- a/src/main/res/values-uk/strings.xml
+++ b/src/main/res/values-uk/strings.xml
@@ -40,8 +40,6 @@
     <string name="qms_unavailable">Сервер геосервисов недоступен</string>
     <string name="nextgis_web">NextGIS Web</string>
     <string name="ngw_login_title">Акаунт NextGIS Web</string>
-    <string name="ngw_login_description">Введіть посилання на сервер NextGIS Web, ваш логін і пароль</string>
-    <string name="ngw_edit_login_description">Введіть ваш логін і пароль для серверу NextGIS Web</string>
     <string name="ngw_url">Посилання на NextGIS Web</string>
     <string name="password">Пароль</string>
     <string name="login">Логін</string>
@@ -49,10 +47,9 @@
     <string name="canceled">Скасовано</string>
     <string name="account_already_exists">Акаунт вже існує</string>
     <string name="error_login">Помилка входу</string>
-    <string name="add_nextgis">Додати NextGIS</string>
+    <string name="add_nextgis">Додати из NextGIS</string>
     <string name="ngw_settings">Налаштування NextGIS Web</string>
-    <string name="add_account">Додати акаунт</string>
-    <string name="add_account_summary">Додати акаунт NextGIS Web</string>
+    <string name="add_account">Добавить аккаунт</string>
     <string name="delete_account">Видалити акаунт</string>
     <string name="delete_account_ask">Видалити акаунт?</string>
     <string name="delete_account_summary">Аккаунт буде видалений!\nВсі шари акаунту будуть видалені!\nПоточна синхронізація буде зупинена!</string>
@@ -61,7 +58,6 @@
     <string name="add">Додати</string>
     <string name="select">Вибрати</string>
     <string name="choose_layers">Вибрати шар</string>
-    <string name="ngw_account">Акаунт NextGIS Web</string>
     <string name="loading_summary">Зачекайте трохи. Дані завантажуються</string>
     <string name="up_dots">..</string>
     <string name="up">Вгору</string>
@@ -277,7 +273,8 @@
     <string name="delete_account_warn_msg">Учетная запись будет удалена!\nВсе слои будут удалены!\nСинхронизация будет остановлена!</string>
     <string name="replace_field_rule">Все текущие правила будут удалены из-за смены поля для правила. Вы уверены?</string>
     <string name="new_gis">Создать ГИС</string>
-    <string name="manual_ngw">Собственные настройки</string>
+    <string name="manual_ngw">Расширенные настройки</string>
     <string name="instance_name">Имя ГИС</string>
-    <string name="ngw_from_my_nextgis">ГИС из my.nextgis.com</string>
+    <string name="ngw_from_my_nextgis">Создайте свою собственную ГИС на my.nextgis.com</string>
+    <string name="new_account">Новый аккаунт</string>
 </resources>
