Add ngw webmap layer

--- a/src/main/res/values-pt-rBR/strings.xml
+++ b/src/main/res/values-pt-rBR/strings.xml
@@ -279,4 +279,5 @@
     <string name="new_account">New account</string>
     <string name="guest">Guest</string>
     <string name="field_not_filled">Some fields are empty</string>
+    <string name="web_map">Web map</string>
 </resources>
