--- a/src/main/res/values-ru/strings.xml
+++ b/src/main/res/values-ru/strings.xml
@@ -280,4 +280,5 @@
     <string name="ngw_from_my_nextgis">Создайте свою собственную ГИС на my.nextgis.com</string>
     <string name="guest">Гость</string>
     <string name="field_not_filled">Некоторые поля пустые</string>
+    <string name="web_map">Веб карта</string>
 </resources>
