--- a/src/main/res/values-uk/strings.xml
+++ b/src/main/res/values-uk/strings.xml
@@ -279,4 +279,5 @@
     <string name="new_account">Новый аккаунт</string>
     <string name="guest">Гость</string>
     <string name="field_not_filled">Некоторые поля пустые</string>
+    <string name="web_map">Веб карта</string>
 </resources>
