--- a/src/main/res/values-pt-rBR/strings.xml
+++ b/src/main/res/values-pt-rBR/strings.xml
@@ -38,7 +38,7 @@
     <string name="tmstype_normal">TMS (OSGeo spec.)</string>
     <string name="error_invalid_url">URL is invalid</string>
     <string name="qms_unavailable">Geoservice server is unavailable</string>
-    <string name="nextgis_web">NextGIS Web</string>
+    <string name="nextgis_web">NextGIS</string>
     <string name="ngw_login_title">NextGIS Web account</string>
     <string name="ngw_url">NextGIS Web URL</string>
     <string name="password">Password</string>
@@ -48,7 +48,7 @@
     <string name="account_already_exists">Account already exist</string>
     <string name="error_login">Login failed</string>
     <string name="add_nextgis">Add from NextGIS</string>
-    <string name="ngw_settings">NextGIS Web settings</string>
+    <string name="ngw_settings">NextGIS settings</string>
     <string name="add_account">Add account</string>
     <string name="delete_account">Delete account</string>
     <string name="delete_account_ask">Delete account?</string>
