Fix new account menu item title, fix #447

--- a/src/main/res/values-pt-rBR/strings.xml
+++ b/src/main/res/values-pt-rBR/strings.xml
@@ -276,7 +276,7 @@
     <string name="manual_ngw">Switch to advanced</string>
     <string name="instance_name">Instance name</string>
     <string name="ngw_from_my_nextgis">Create your own GIS at my.nextgis.com</string>
-    <string name="new_account">New account</string>
+    <string name="new_account">Sign up in nextgis.com</string>
     <string name="guest">Guest</string>
     <string name="field_not_filled">Some fields are empty</string>
     <string name="web_map">Web map</string>
