--- a/src/main/res/values-uk/strings.xml
+++ b/src/main/res/values-uk/strings.xml
@@ -276,7 +276,7 @@
     <string name="manual_ngw">Расширенные настройки</string>
     <string name="instance_name">Имя ГИС</string>
     <string name="ngw_from_my_nextgis">Создайте свою собственную ГИС на my.nextgis.com</string>
-    <string name="new_account">Новый аккаунт</string>
+    <string name="new_account">Завести учетную запись в nextgis.com</string>
     <string name="guest">Гость</string>
     <string name="field_not_filled">Некоторые поля пустые</string>
     <string name="web_map">Веб карта</string>
