--- a/src/main/res/values-pt-rBR/strings.xml
+++ b/src/main/res/values-pt-rBR/strings.xml
@@ -163,7 +163,7 @@
     <string name="has_edits">There are unsaved edits. Do you want to save them?</string>
     <string name="attributes_next">Next</string>
     <string name="attributes_prev">Previous</string>
-    <string name="geometry_no_points">No enough points to create geometry</string>
+    <string name="not_enough_points">Not enough points</string>
     <string name="error_change_feature">Change feature failed</string>
     <string name="move_point_to_center">Point to display center</string>
     <string name="mainSettings">Main settings</string>
@@ -280,4 +280,6 @@
     <string name="guest">Guest</string>
     <string name="field_not_filled">Some fields are empty</string>
     <string name="web_map">Web map</string>
+    <string name="preparing">Preparing…</string>
+    <string name="export">Export</string>
 </resources>
