--- a/src/main/res/values-ru/strings.xml
+++ b/src/main/res/values-ru/strings.xml
@@ -165,7 +165,7 @@
     <string name="has_edits">Есть несохраненные изменения. Хотите сохранить их?</string>
     <string name="attributes_next">Следующий</string>
     <string name="attributes_prev">Предыдущий</string>
-    <string name="geometry_no_points">Недостаточно точек для создания геометрии</string>
+    <string name="not_enough_points">Недостаточно точек</string>
     <string name="error_change_feature">Ошибка изменения записи</string>
     <string name="move_point_to_center">Точка в центр экрана</string>
     <string name="mainSettings">Основные настройки</string>
@@ -281,4 +281,6 @@
     <string name="field_not_filled">Некоторые поля пустые</string>
     <string name="web_map">Веб карта</string>
     <string name="renderer">Отрисовка</string>
+    <string name="preparing">Подготовка…</string>
+    <string name="export">Экспорт</string>
 </resources>
