--- a/src/main/res/values-ru/strings.xml
+++ b/src/main/res/values-ru/strings.xml
@@ -283,4 +283,5 @@
     <string name="renderer">Отрисовка</string>
     <string name="preparing">Подготовка…</string>
     <string name="export">Экспорт</string>
+    <string name="accurate_finish_sound">Уведомить о завершении</string>
 </resources>
