--- a/src/main/res/values/strings.xml
+++ b/src/main/res/values/strings.xml
@@ -96,6 +96,7 @@
     <string name="accuracy_caption_short">Acc</string>
     <string name="accurate_location">Accurate location</string>
     <string name="accurate_taking">Accumulating and averaging location…</string>
+    <string name="accurate_finish_sound">Beep at finish</string>
     <string name="action_settings">Settings</string>
     <string name="do_not_ask_again">Do not ask again</string>
     <string name="apply">Apply</string>
