--- a/src/main/res/values/strings.xml
+++ b/src/main/res/values/strings.xml
@@ -287,4 +287,5 @@
     <string name="guest">Guest</string>
     <string name="field_not_filled">Some fields are empty</string>
     <string name="web_map">Web map</string>
+    <string name="no_features">Layer has no features</string>
 </resources>
