--- a/src/main/res/values-uk/strings.xml
+++ b/src/main/res/values-uk/strings.xml
@@ -284,4 +284,5 @@
     <string name="preparing">Подготовка…</string>
     <string name="export">Экспорт</string>
     <string name="accurate_finish_sound">Уведомить о завершении</string>
+    <string name="no_features">В слое нет объектов </string>
 </resources>
