--- a/src/main/res/values-pt-rBR/strings.xml
+++ b/src/main/res/values-pt-rBR/strings.xml
@@ -285,4 +285,5 @@
     <string name="export">Export</string>
     <string name="accurate_finish_sound">Beep at finish</string>
     <string name="no_features">Layer has no features</string>
+    <string name="discard">Discard</string>
 </resources>
