--- a/src/main/res/values-ru/strings.xml
+++ b/src/main/res/values-ru/strings.xml
@@ -286,4 +286,5 @@
     <string name="export">Экспорт</string>
     <string name="accurate_finish_sound">Уведомить о завершении</string>
     <string name="no_features">В слое нет объектов </string>
+    <string name="discard">@string/cancel</string>
 </resources>
