--- a/src/main/res/values-uk/strings.xml
+++ b/src/main/res/values-uk/strings.xml
@@ -285,4 +285,5 @@
     <string name="export">Экспорт</string>
     <string name="accurate_finish_sound">Уведомить о завершении</string>
     <string name="no_features">В слое нет объектов </string>
+    <string name="discard">Discard</string>
 </resources>
