--- a/src/main/res/values-ru/strings.xml
+++ b/src/main/res/values-ru/strings.xml
@@ -287,4 +287,5 @@
     <string name="accurate_finish_sound">Уведомить о завершении</string>
     <string name="no_features">В слое нет объектов </string>
     <string name="discard">@string/cancel</string>
+    <string name="error_export_geojson">Невозможно создать конечный geojson</string>
 </resources>
