--- a/src/main/res/values-uk/strings.xml
+++ b/src/main/res/values-uk/strings.xml
@@ -286,4 +286,5 @@
     <string name="accurate_finish_sound">Уведомить о завершении</string>
     <string name="no_features">В слое нет объектов </string>
     <string name="discard">Discard</string>
+    <string name="error_export_geojson">Невозможно создать конечный geojson</string>
 </resources>
