--- a/src/main/res/values-pt-rBR/strings.xml
+++ b/src/main/res/values-pt-rBR/strings.xml
@@ -287,4 +287,5 @@
     <string name="no_features">Layer has no features</string>
     <string name="discard">Discard</string>
     <string name="error_export_geojson">Can not create geojson output</string>
+    <string name="attributes">Attributes</string>
 </resources>
