--- a/src/main/res/values-ru/strings.xml
+++ b/src/main/res/values-ru/strings.xml
@@ -288,4 +288,5 @@
     <string name="no_features">В слое нет объектов </string>
     <string name="discard">@string/cancel</string>
     <string name="error_export_geojson">Невозможно создать конечный geojson</string>
+    <string name="attributes">Атрибуты</string>
 </resources>
