--- a/src/main/res/values/strings.xml
+++ b/src/main/res/values/strings.xml
@@ -290,4 +290,5 @@
     <string name="web_map">Web map</string>
     <string name="no_features">Layer has no features</string>
     <string name="error_export_geojson">Can not create geojson output</string>
+    <string name="attributes">Attributes</string>
 </resources>
