--- a/src/main/res/values-ru/strings.xml
+++ b/src/main/res/values-ru/strings.xml
@@ -289,4 +289,5 @@
     <string name="discard">@string/cancel</string>
     <string name="error_export_geojson">Невозможно создать конечный geojson</string>
     <string name="attributes">Атрибуты</string>
+    <string name="error_cache">Неверный кэш, перестройте в настройках слоя</string>
 </resources>
