--- a/src/main/res/values-uk/strings.xml
+++ b/src/main/res/values-uk/strings.xml
@@ -288,4 +288,5 @@
     <string name="discard">Discard</string>
     <string name="error_export_geojson">Невозможно создать конечный geojson</string>
     <string name="attributes">Атрибуты</string>
+    <string name="error_cache">Неверный кэш, перестройте в настройках слоя</string>
 </resources>
