--- a/src/main/res/values/strings.xml
+++ b/src/main/res/values/strings.xml
@@ -291,4 +291,5 @@
     <string name="no_features">Layer has no features</string>
     <string name="error_export_geojson">Can not create geojson output</string>
     <string name="attributes">Attributes</string>
+    <string name="error_cache">Bad cache, try rebuild it in layer settings</string>
 </resources>
