--- a/src/main/res/values-pt-rBR/strings.xml
+++ b/src/main/res/values-pt-rBR/strings.xml
@@ -289,4 +289,5 @@
     <string name="error_export_geojson">Can not create geojson output</string>
     <string name="attributes">Attributes</string>
     <string name="error_cache">Bad cache, try rebuild it in layer settings</string>
+    <string name="sync_disable">Disable sync</string>
 </resources>
